Joshfischer/add angular client (#26)
* initial add of client